Works till step 11

--- a/firebase.json
+++ b/firebase.json
@@ -36,4 +36,11 @@
       }
     ]
   }
+  ,
+  "emulators": {
+    "firestore": {
+      "port": 8081
+    }, 
+    "functions": { "port": 5002 }
+  }
 }
