--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -1,7 +1,14 @@
 {
+  "main": "src/index.js",
   "dependencies": {
     "@google/genai": "^1.42.0",
     "cors": "^2.8.6",
-    "express": "^5.2.1"
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "firebase-admin": "^13.6.1",
+    "firebase-functions": "^7.0.5"
+  },
+  "engines": {
+    "node": "24"
   }
 }
