--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,8 @@
   },
   "functions": [
     {
-      "source": "functions",
+      "source": "app/functions",
+      "runtime": "nodejs24",
       "codebase": "default",
       "disallowLegacyRuntimeConfig": true,
       "ignore": [
