--- a/app/client/package.json
+++ b/app/client/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.2.0",
     "firebase": "^12.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-pro-sidebar": "^1.1.0",
     "react-markdown": "^10.1.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.13.0",
-    "tailwindcss": "^4.2.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
