--- a/app/client/package.json
+++ b/app/client/package.json
@@ -20,7 +20,8 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.13.0",
     "remark-gfm": "^4.0.1",
-    "tailwindcss": "^4.2.0"
+    "tailwindcss": "^4.2.0",
+    "twilio": "^5.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
