--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
-    "firebase-functions": "^7.0.5"
+    "firebase-functions": "^7.0.5",
+    "twilio": "^5.12.2"
   },
   "engines": {
     "node": "24"
