--- a/firebase.json
+++ b/firebase.json
@@ -6,22 +6,11 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": [
-    {
-      "source": "app/functions",
-      "runtime": "nodejs24",
-      "codebase": "default",
-      "disallowLegacyRuntimeConfig": true,
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
-    }
+
+  {
+    "source": "functions"
+  }
+
   ],
   "hosting": {
     "public": "app/client/dist",
